# CodingChallengesTraining

./: .gitguardian.yaml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
Challenges/: helloWorld.py  sparseMatrixMultiplication.py
