[tool.poetry]
name = "Test Package"
version = "0.1.0"
description = "Code Challenge Boilerplates"
authors = ["Nicholas Drabowski <nicholas.drabowski@gmail.com>"]
license = "Private"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
requests = "^2.28.2"
ggshield = "^1.14.4"
scipy = "^1.10.1"
tensorflow = "^2.11.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
